# classic_template_dataflow

./: .gitignore  404.html  index.html  pyproject.toml
classic_templates/template_voos/: pipe_voos_to_bigquery.py
scripts/: build_template_voos.sh
search/: search_index.json
