[tool.poetry]
name = "classic-template"
version = "0.1.0"
description = ""
authors = ["marcus-moura <marcuspaulo.moura@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apache-beam = {extras = ["gcp"], version = "^2.54.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
